--- a/styles.css
+++ b/styles.css
@@ -42,17 +42,17 @@ body{
     margin-block-end: 5px;
 }
 #rodape{
-    height: 100px;
+    height: 50px;
     background-color: rgb(202, 237, 246);
     clear: both;
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 button {
     background-color: #04AA6D; /* Green */
     border: none;
-    color: white;
+    color: rgb(255, 0, 0);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -62,6 +62,7 @@ button {
   h3{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20;
+    text-align: center;
   }
   h5{
     font-family: 'Times New Roman', Times, serif;
@@ -74,4 +75,20 @@ button {
     padding:center;
     font-family: 'Times New Roman', Times, serif;
     color: beige;
+  }
+  p{
+    text-align: ;
+  }
+  .posicao{
+
+    height: 200px;
+    width: 200px;
+    background-color: rgb(8, 0, 255);
+    float: left;
+    
+
+  }
+  table{
+    text-align: center;
+    padding: center;
   }
