--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
 #cabecalho{
     height: 150px;
     background-color: rgb(157, 215, 120);
-    width: 95%;
+    width: 100%;
     margin: 0 auto;
     text-align: center;
 }
@@ -18,7 +18,7 @@ body{
     
     
     height: 500px;
-    width: 300px;
+    width: 450px;
     
     float: left;
     margin-left: 30px;
@@ -27,15 +27,15 @@ body{
 #conteudo{
     height: 500px;
     width: 900px;
-    background-color: rgb(211, 225, 177);
+    background-color: rgb(194, 236, 168);
     float: left;
     margin-top: 10px;
     margin-left: 5px;
 }
 #lado{
     height: 500px;
-    width: 300px;
-    
+    width: 500px;
+
     float: left;
     margin-left: 5px;
     margin-top: 10px;
@@ -43,16 +43,16 @@ body{
 }
 #rodape{
     height: 50px;
-    background-color: rgb(202, 237, 246);
+    background-color: rgb(210, 246, 255);
     clear: both;
     width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 button {
-    background-color: #04AA6D; /* Green */
+    background-color: rgb(157, 215, 120);
     border: none;
-    color: rgb(255, 0, 0);
+    color: beige;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -60,6 +60,7 @@ button {
     font-size: 16px;
   }
   h3{
+    font-weight: normal;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20;
     text-align: center;
@@ -69,26 +70,36 @@ button {
     font-size: 30;
   }
   h2{
+    color:rgb(31, 25, 88);
     text-align: center;
+    font-family:'Times New Roman', Times, serif;
   }
+ 
   h1{
     padding:center;
     font-family: 'Times New Roman', Times, serif;
     color: beige;
   }
-  p{
-    text-align: ;
-  }
-  .posicao{
+ 
 
-    height: 200px;
-    width: 200px;
-    background-color: rgb(8, 0, 255);
-    float: left;
-    
 
-  }
-  table{
+  td, th {
+    padding: .7em;
+    margin: 0;
+    border: 1px solid beige;
     text-align: center;
-    padding: center;
-  }
+   }
+   
+   table{
+    width: 100%;
+    margin-bottom : .5em;
+    table-layout: fixed;
+    text-align: center;
+   }
+
+   body{
+    background-color: beige;
+   }
+    p{
+        color: rgb(31, 25, 88);
+    }
