--- a/styles02.css
+++ b/styles02.css
@@ -9,7 +9,7 @@ body{
 
 #cabecalho{
     height: 80px;
-    background-color: rgb(157, 215, 120);
+    background-color:rgb(130, 206, 236);
     width: 100%;
     margin: 0 auto;
     text-align: center;
@@ -26,15 +26,15 @@ body{
 }
 
 #conteudo{
-    height: 500px;
-    width: 900px;
-    background-color: rgb(194, 236, 168);
+    height: 480px;
+    width: 950px;
+    background-color: rgb(185, 229, 247);
     float: left;
     margin-top: 10px;
     margin-left: 5px;
 }
 #lado{
-    height: 500px;
+    height: 550px;
     width: 500px;
    
     float: left;
@@ -45,14 +45,14 @@ body{
 
 #rodape{
     height: 50px;
-    background-color: rgb(210, 246, 255);
+    background-color: rgb(130, 206, 236);
     clear: both;
     width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 button {
-    background-color: rgb(157, 215, 120);
+    background-color: rgb(130, 206, 236);
     border: none;
     color: beige;
     padding: 15px 32px;
@@ -61,7 +61,7 @@ button {
     display: inline-block;
     font-size: 16px;
   }
-  h3{
+  h4{
     font-weight: normal;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20;
@@ -82,13 +82,16 @@ button {
     font-family: 'Times New Roman', Times, serif;
     color: beige;
   }
+  h3{
+    text-align: center;
+  }
  
 
 
   td, th {
     padding: .7em;
     margin: 0;
-    border: 1px solid beige;
+    border: 1px solid rgb(219, 241, 250);
     text-align: center;
    }
    
@@ -100,8 +103,19 @@ button {
    }
 
    body{
-    background-color: beige;
+    background-color: rgb(219, 241, 250);
    }
     p{
         color: rgb(31, 25, 88);
     }
+    img{
+      -webkit-transition: -webkit-transform .5s ease;
+      transition: transform .5s ease;
+  }
+   
+  img:hover{
+      -webkit-transform:scale(1);
+      transform: scale(1.09);
+   
+   
+  }
