--- a/styles04.css
+++ b/styles04.css
@@ -9,7 +9,7 @@ body{
 
 #cabecalho{
     height: 80px;
-    background-color: rgb(210, 97, 255);
+    background-color: rgb(130, 206, 236);
     width: 100%;
     margin: 0 auto;
     text-align: center;
@@ -26,9 +26,9 @@ body{
 }
 
 #conteudo{
-    height: 500px;
+    height: 660px;
     width: 900px;
-    background-color: rgb(209, 179, 236);
+    background-color:  rgb(185, 229, 247);
     float: left;
     margin-top: 10px;
     margin-left: 5px;
@@ -45,14 +45,14 @@ body{
 
 #rodape{
     height: 50px;
-    background-color: rgb(210, 97, 255);
+    background-color:rgb(130, 206, 236);
     clear: both;
     width: 100%;
     margin: 0 auto;
     text-align: center;
 }
 button {
-    background-color:rgb(210, 97, 255);
+    background-color:rgb(130, 206, 236);
     border: none;
     color: beige;
     padding: 15px 32px;
@@ -82,6 +82,10 @@ button {
     font-family: 'Times New Roman', Times, serif;
     color: beige;
   }
+  h4{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+  }
  
 
 
@@ -100,8 +104,19 @@ button {
    }
 
    body{
-    background-color: rgb(238, 220, 245);
+    background-color: rgb(219, 241, 250);
    }
     p{
         color: rgb(31, 25, 88);
     }
+    img{
+      -webkit-transition: -webkit-transform .5s ease;
+      transition: transform .5s ease;
+  }
+   
+  img:hover{
+      -webkit-transform:scale(1);
+      transform: scale(1.09);
+   
+   
+  }
