--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body{
     width: 950px;
     background-color: rgb(185, 229, 247);
     
-    float: left;
+    float: center;
     margin-top: 10px;
     margin-left: 5px;
 }
@@ -38,7 +38,7 @@ body{
     height: 500px;
     width: 500px;
 
-    float: left;
+    float: center;
     margin-left: 5px;
     margin-top: 10px;
     margin-block-end: 5px;
